@@ -1,13 +1,19 @@
 package commons;
 
+import java.io.IOException;
+import java.util.List;
+
 /**
  * 执行命令行，可用于adb logcat抓取崩溃log等
  */
 public class Command {
-    private String cmd;
+    private List<String> cmd;
+    private Process process;
 
-    public Command(String cmd) {
-        this.cmd = cmd;
+    public Command(String ...str) {
+        for(String s :str){
+            cmd.add(s);
+        }
     }
 
     /**
@@ -15,11 +21,14 @@ public class Command {
      */
     public void exeCmd(){
         try {
-            Runtime.getRuntime().exec(cmd);
-        } catch (Exception e) {
-            LoggerConf.logobject.severe("exeCmd异常");
-            e.printStackTrace();
+            process = new ProcessBuilder(cmd).start();
+        } catch (IOException e) {
+            LoggerConf.logobject.severe(e.getMessage());
         }
+    }
+
+    public void quitCmd(){
+        process.destroy();
     }
 
 }
